# live-stream-segmenter

./: .aiexclude  .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.MIT  README.md  buildspec.json  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: build-docs.yml  build-project.yaml  daily-website-security-check.yaml  deploy-docs.yml  deploy-project.yaml  docs.yml  issue-first-responder.yaml  push.yaml  test.yaml  unsupported-build.yaml
build-aux/: .run-format.zsh  run-clang-format  run-gersemi
bundle/: dayjs.ts  ini.ts  localstorage.js  package.json  youtube.js
cmake/linux/: defaults.cmake
data/locale/: en-US.ini  ja-JP.ini
docs/: package-lock.json  package.json
docs/public/: robots.txt
docs/scripts/: add-csp-hashes.mjs  add-sri.mjs  generate-provenance.mjs
docs/src/components/: MonacoEditor.astro
docs/src/layouts/: Layout.astro  MarkdownLayout.astro
docs/src/lib/: github.ts  info.ts
docs/src/pages/: 404.astro  index.astro
docs/src/styles/: global.css
scripts/: generate-script-engine-bundle.sh  install-vcpkg-macos-asan.sh
src/: CMakeLists.txt  plugin-main.c  plugin-main.cpp
src/Async/: CMakeLists.txt  Channel.hpp  Consumer.hpp  Generator.hpp  Join.hpp  SymmetricTransfer.hpp  Task.hpp  TaskStorage.hpp
src/Async/KaitoTokyo/Async/: Channel.hpp
src/AsyncQt/: CMakeLists.txt  ResumeOnQObject.hpp  ResumeOnQThreadPool.hpp  ResumeOnQTimerSingleShot.hpp  ResumeOnQtMainThread.hpp  TaskLauncher.cpp  TaskLauncher.hpp  TaskQtLauncher.cpp  TaskQtLauncher.hpp
src/BridgeUtils/: AsyncTextureReader.hpp  GsUnique.hpp  ObsLogger.hpp  ObsUnique.hpp
src/Core/: MainPluginContext.cpp  MainPluginContext.h  MainPluginContext_c.cpp  PluginConfig.hpp  PluginProperty.hpp  RenderingContext.cpp  RenderingContext.hpp
src/CurlHelper/: CMakeLists.txt  CurlHandle.hpp  CurlReadCallback.hpp  CurlReader.hpp  CurlSlistHandle.hpp  CurlURLSearchParam.hpp  CurlUrlHandle.hpp  CurlUrlHandler.hpp  CurlUrlSearchParams.hpp  CurlVectorWriter.hpp  CurlWriteCallback.hpp
src/CurlHelper/KaitoTokyo/CurlHelper/: CurlHandle.hpp  CurlUrlHandle.hpp  CurlUrlSearchParams.hpp
src/GoogleAuth/: CMakeLists.txt  GoogleAuthManager.cpp  GoogleAuthManager.hpp  GoogleAuthResponse.cpp  GoogleAuthResponse.hpp  GoogleOAuth2ClientCredentials.cpp  GoogleOAuth2ClientCredentials.hpp  GoogleOAuth2Flow.cpp  GoogleOAuth2Flow.hpp  GoogleTokenState.cpp  GoogleTokenState.hpp
src/GoogleAuth/KaitoTokyo/GoogleAuth/: GoogleAuthManager.cpp  GoogleAuthManager.hpp  GoogleAuthManager_mock.cpp  GoogleAuthResponse.cpp  GoogleAuthResponse.hpp  GoogleOAuth2ClientCredentials.hpp  GoogleOAuth2Flow.cpp  GoogleOAuth2Flow.hpp  GoogleOAuth2Flow_mock.cpp  GoogleTokenState.cpp
src/LiveStreamSegmenter/: CMakeLists.txt
src/LiveStreamSegmenter/API/: CMakeLists.txt  YouTubeApiClient.cpp  YouTubeApiClient.hpp  YouTubeTypes.hpp
src/LiveStreamSegmenter/Auth/: AuthTask.hpp  CMakeLists.txt  GoogleAuthManager.cpp  GoogleAuthManager.hpp  GoogleAuthResponse.hpp  GoogleAuthState.cpp  GoogleAuthState.hpp  GoogleAuthStorage.cpp  GoogleAuthStorage.hpp  GoogleOAuth2ClientCredential.hpp  GoogleOAuth2ClientCredentials.hpp  GoogleOAuth2ClientCrendential.hpp  GoogleOAuth2Flow.cpp  GoogleOAuth2Flow.hpp  GoogleTokenManager.cpp  GoogleTokenManager.hpp  GoogleTokenResponse.hpp  GoogleTokenState.hpp  GoogleTokenStorage.cpp  GoogleTokenStorage.hpp  TokenStorage.cpp  TokenStorage.hpp
src/LiveStreamSegmenter/Controller/: CMakeLists.txt  MainPluginContext.cpp  MainPluginContext.hpp  ProfileContext.cpp  ProfileContext.hpp  YouTubeStreamSegmenter.cpp  YouTubeStreamSegmenter.hpp  YouTubeStreamSegmenterMainLoop.cpp  YouTubeStreamSegmenterMainLoop.hpp
src/LiveStreamSegmenter/Scripting/: CMakeLists.txt  EventScriptEngine.cpp  EventScriptEngine.hpp  EventScriptingContext.cpp  EventScriptingContext.hpp  ScopedQuickJs.hpp  ScriptingDatabase.cpp  ScriptingDatabase.hpp  ScriptingRuntime.cpp  ScriptingRuntime.hpp  dayjs_bundle.c  ini_bundle.c  localstorage_bundle.c  youtube_bundle.c
src/LiveStreamSegmenter/Service/: AuthService.hpp
src/LiveStreamSegmenter/Store/: AuthStore.cpp  AuthStore.hpp  CMakeLists.txt  EventHandlerStore.cpp  EventHandlerStore.hpp  YouTubeStore.cpp  YouTubeStore.hpp
src/LiveStreamSegmenter/UI/: CMakeLists.txt  GoogleOAuth2FlowCallback.hpp  GoogleOAuth2FlowCallbackServer.cpp  GoogleOAuth2FlowCallbackServer.hpp  JsonDropArea.cpp  JsonDropArea.hpp  OAuth2Handler.cpp  OAuth2Handler.hpp  SettingsDialog.cpp  SettingsDialog.hpp  StreamSegmenterDock.cpp  StreamSegmenterDock.hpp  fmt_qstring_formatter.hpp
src/LiveStreamSegmenter/YouTubeApi/: CMakeLists.txt  YouTubeApiClient.cpp  YouTubeApiClient.hpp  YouTubeTypes.cpp  YouTubeTypes.hpp
src/Logger/: CMakeLists.txt  ILogger.hpp  MultiLogger.hpp  NullLogger.hpp  PrintLogger.hpp
src/Logger/KaitoTokyo/Logger/: NullLogger.hpp
src/ObsBridgeUtils/: AsyncTextureReader.hpp  CMakeLists.txt  GsUnique.hpp  ObsLogger.hpp  ObsUnique.hpp
src/ObsBridgeUtils/KaitoTokyo/ObsBridgeUtils/: ObsLogger.hpp  ObsUnique.hpp
src/UI/: StreamSegmenterDock.hpp
src/UpdateChecker/: CMakeLists.txt  UpdateChecker.hpp
src/YouTubeApi/: CMakeLists.txt  YouTubeApiClient.cpp  YouTubeApiClient.hpp  YouTubeTypes.cpp
src/YouTubeApi/KaitoTokyo/YouTubeApi/: YouTubeApiClient.cpp  YouTubeApiClient.hpp  YouTubeApiClient_mock.cpp  YouTubeTypes.cpp  YouTubeTypes.hpp
src/tests/: CMakeLists.txt
src/tests/SelfieSegmenter/: NcnnSelfieSegmenter_test.cpp
tests/: CMakeLists.txt
tests/Scripting/: EventScriptEngine_test.cpp  EventScriptingContext_test.cpp
tests/UpdateChecker/: UpdateChecker_test.cpp
unsupported/: update-packages.sh
unsupported/arch/: README.md
unsupported/arch/live-stream-segmenter/: PKGBUILD
unsupported/arch/live-stream-segmenter-git/: PKGBUILD
unsupported/flatpak/: README.md  com.obsproject.Studio.Plugin.LiveStreamSegmenter.json  com.obsproject.Studio.Plugin.LiveStreamSegmenter.metainfo.xml
vcpkg-triplets/: x64-osx-obs.cmake
wasm/EventScripting/: CMakeLists.txt  EventScripting.cpp  main.cpp
(+2 files in other folders)
